--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,12 +5,12 @@ requires = ["setuptools", "setuptools_scm[toml]", "numpy"]
 [project]
 authors = [{name = "ndmlny-qs", email = "60523020+ndmlny-qs@users.noreply.github.com"}]
 classifiers = []
-dependencies = []
+dependencies = ["pre-commit"]
 description = "C++ extention build using NumPy as an optional dependency."
 keywords = []
 license = {file = "LICENSE"}
 maintainers = []
-name = "cpp_np"
+name = "trig"
 readme = {file = "README.md", content-type = "text/markdown"}
 requires-python = ">3.11"
 version = "0.1.0"
@@ -31,6 +31,7 @@ dev = [
   "ruff",
   "yamlfix",
 ]
+numpy = ["numpy"]
 test = ["ipdb", "pytest", "pytest-cov"]
 
 [project.urls]
